Fixed problems related to generics
Did not touch TurtleParser.java and TurtleParserTokenManager
as they consist of purely generated code.