@@ -19,7 +19,7 @@ class NodeLessThanExpression extends SimpleNode {
     jjtGetChild(1).interpret();
     double rightOperand = ((Double)expressionStack.pop()).doubleValue();
 
-    expressionStack.push(new Boolean(leftOperand < rightOperand));
+    expressionStack.push(Boolean.valueOf(leftOperand < rightOperand));
 }
 }
 /* JavaCC - OriginalChecksum=5973ba115e2a24a93dc38f955aabeabf (do not edit this line) */
